2/2/11 make Reset All in any tab perform a reset of global settings (eg, Options->Show molecules)
2/2/11 move ResetAll button to upper left to free up vertical space (will be needed in Game)
2/2/11 enable Reset All confirmation, for discussion
2/2/11 center justification of balance scales
2/2/11 share one instance of HorizontalAligner
2/2/11 center justification of bar charts
2/2/11 revert to HorizontalAligner for aligning equation and molecules 
2/2/11 horizontally align equation terms and molecule columns
2/2/11 adjust box size and separation
2/2/11 abandon HorizontalAligner approach to alignment of multiple representations
2/2/11 capitalize view choices
2/2/11 fix: order of bars should be the same for reactants and products
2/2/11 move atom counting to Equation model
2/2/11 change request: make equality sign in bar charts the same color as equation arrows
2/2/11 change request: make '+' in equations black
2/2/11 change request: do not reset coefficients when switching equations
2/2/11 change request: add "none" as a choice of visual representations
2/2/11 fix: set background for control panels in play area
2/1/11 doc
2/1/11 remove unused code
# 0.00.01 (48489) Feb 1, 2011
2/1/11 dev version for discussion with KL, no horizontal alignment
2/1/11 fix layout of balance scales so that fulcrums remain in fixed locations
2/1/11 wire up Options->Show molecules
2/1/11 add skeleton for Options menu
2/1/11 implement tilt of balance scale beam
2/1/11 completed piles of atoms on balance scales
2/1/11 first pass at piles of atoms on balance scale beam, has some problems
2/1/11 reduce max limit of bars, don't add additional height for arrows, reduce size of bars
1/31/11 add dev team credits
1/31/11 make smiley face much smaller, change layout
1/31/11 add dev node that shows the balanced equation
1/31/11 partial implementation of balance scales view (fulcrums only)
1/31/11 completed bar charts view with simplified horizontal alignment