@@ -1,5 +1,0 @@
-C.png author=PhET notes=using ChemDraw
-H.png author=PhET notes=using ChemDraw
-N.png author=PhET notes=using ChemDraw
-O.png author=PhET notes=using ChemDraw
-S.png author=PhET notes=using ChemDraw
