@@ -1,7 +1,0 @@
-CH4.png author=PhET notes=using ChemDraw
-CO2.png author=PhET notes=using ChemDraw
-H2.png author=PhET notes=using ChemDraw
-H2O.png author=PhET notes=using ChemDraw
-N2.png author=PhET notes=using ChemDraw
-NH3.png author=PhET notes=using ChemDraw
-O2.png author=PhET notes=using ChemDraw
